--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,11 +1,165 @@
+@import 'themeColors';
+$theme-font: verdana, sans-serif;
+
+/*body {
+  font: $theme-font;
+  background-color: $themeColor-Light;
+  h1, h2 {
+      color: $themeColor-Dark
+  }
+}*/
+.hr {
+  text-align: center;
+  span {
+    position: relative !important;
+    padding: 16px !important;
+  }
+
+  span::before {
+    content: '' !important;
+    position: absolute !important;
+    border-bottom: 1px solid #e4e4e4 !important;
+    top: 50% !important;
+    right: 100% !important;
+    width: 200px !important;
+  }
+
+  span::after {
+    content: '' !important;
+    position: absolute !important;
+    border-bottom: 1px solid #e4e4e4 !important;
+    top: 50% !important;
+    left: 100% !important;
+    width: 200px !important;
+  }
+}
+
+.form {
+  &--field {
+    margin: 2rem 0 0 0;
+    font-size: 16px;
+    position: relative;
+    padding: 0;
+  }
+  &--login {
+    background-color: #ffffff !important;
+    font-family: 'Open Sans Condensed', sans-serif, sans-serif;
+    border-radius: 4px;
+    position: fixed !important;
+    top: 0px !important;
+    right: 0px !important;
+    bottom: 0px !important;
+    left: 0px !important;
+    overflow-y: auto !important;
+    z-index: 3000 !important;
+    margin: auto !important;
+    max-width: 568px !important;
+    width: 100% !important;
+    padding: 34px !important;
+    max-height: fit-content;
+    display: grid;
+    grid-template-columns: 100%;
+    grid-row-gap: 15px;
+    justify-content: center
+  }
+
+  &--input {
+    border: none;
+    border-bottom: 1px solid #9e9e9e;
+    outline: none;
+    height: 2rem;
+    width: 100%;
+    font-size: 1rem;
+    transition: all 0.3s;
+  }
+
+  &--input:focus + .form--label {
+    color: rgba(85, 172, 238, 1);
+    left: -5;
+  }
+
+  &--label {
+    color: #8a8a8a;
+    float: left;
+    font-size: 16px;
+    margin-right: 10px;
+    width: 100%;
+    position: absolute;
+    top: -10px;
+    left: 0;
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+  }
+
+  &--title {
+    font-weight: 700;
+    word-wrap: break-word;
+    font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+      'Helvetica Neue', sans-serif;
+    font-size: 28px;
+    line-height: 32px;
+    letter-spacing: -0.6px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    color: rgb(72, 72, 72);
+    margin: 0px !important;
+  }
+
+  &--botton {
+    margin-top: 20px;
+    cursor: pointer;
+    position: relative;
+    display: inline-block;
+    text-align: center;
+    width: 100%;
+    font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+      'Helvetica Neue', sans-serif;
+    font-size: 18px;
+    line-height: 22px;
+    padding: 10px 16px;
+    min-width: 77.6656px;
+    transition: background 0.3s, border-color 0.3s !important;
+    text-decoration: none !important;
+    border-radius: 6px !important;
+    border: 1px solid transparent;
+    background: rgba(85, 172, 238, 1) !important;
+    color: white;
+    overflow-x: auto;
+  }
+}
+/* HOW TO USE SASS in BLOCK-ELEMENT-MODIFIER
+.block {
+}
+.block__element {
+}
+.block--modifier {
+}*/
+
+nav[role='navigation'] {
+}
+.nav {
+  &__list {
+    &__item {
+    }
+  }
+  &__link {
+    &--active {
+    }
+  }
+}
+
+// TO DO APPLY with SASS
+
 /********** GENERAL STYLES **********/
 
-h1, h2, h3, h4, h5, h6{ font-family: "Raleway","Open Sans", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif; text-transform: uppercase; font-weight: bold; }
+h1, h2, h3, h4, h5, h6{ font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif; text-transform: uppercase; font-weight: bold; }
 h2{ letter-spacing: 3px; margin-right: -3px; }
 h3{ letter-spacing: 3px; margin-right: -3px; }
 h6{ font-size: 14px; letter-spacing: 2px; margin-right: -2px; }
 h5{ font-size: 18px; letter-spacing: 3px; margin-right: -3px; }
-
+h1{ margin:0px; font-size: 16px}
 body {
     font-size: 100%;
     font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
@@ -38,24 +192,198 @@ body {
     display: grid;
     grid-gap: 3px;
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: 40px 200px 40px;
+    /*grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));*/
+    grid-template-rows: 80px auto 80px;
+   /* grid-template-areas: 
+    ". h h h h h h h h h h ."
+    "m c c c c c c c c c c c"
+    ". f f f f f f f f f f ."; */
 }
 
-.header {
-    /*start at second column and end at last column, fill all */
+.main-header {
+    grid-row: 1;
     grid-column: 1 / -1;
+    align-items: center;
+   /* border-bottom: 2px solid black;
+    z-index: 1;
+    display: flex;
+    position: fixed;
+    top: 0;
+    left:0;
+    width: 100%;
+    justify-content: space-around;*/
 }
+/*.menu {
+    grid-column: 1 / 2;
+}*/
 
-/* menu and content will be on the second row togheter becaus we defined 3 rows instead of 4 sub-container */
-.menu {
-    /* it will expand from the first row to the third row */
-    grid-row: 1 / 3;
-}
 .content {
-    grid-column: 2 / -1;
+    grid-row: 2;
+    grid-column: 1 / -1;
+    overflow-y: auto;
+    align-items: center;
+    text-align: center;
 }
 
 .footer {
-    /*start at first column and end at last column, fill all */
     grid-column: 1 / -1;
+    grid-row: 3;
+}
+
+/************** HEADER STYLE ********/
+
+.top-nav{
+    height: 64px !important;
+    display: table-cell;
+    text-align: right;
+    vertical-align: middle !important;
+    position: relative !important;
+    padding-right: 10px;
+}
+
+.top-nav--button{
+    display: inline-block;
+    height: 45px !important;
+    line-height: 45px !important;
+    margin: 10px !important;
+    position: relative !important;
+    white-space: nowrap !important;
+    cursor: pointer;
+    z-index: 20;
+}
+
+.top-nav--button:hover{
+    border-bottom: 2px solid  blue;
+    
+}
+
+/**************** OVERLAY and MODAL **********/
+.overlay{
+    position: fixed !important;
+    z-index: 1500 !important;
+    top: 0px !important;
+    right: 0px !important;
+    bottom: 0px !important;
+    left: 0px !important;
+    overflow-y: auto !important;
+    background-color: rgba(0, 0, 0, 0.75) !important;
+}
+
+.overlay-content{     
+
+    display: grid;
+    grid-gap: 3px;
+    grid-template-columns: 80px auto 80px;
+    /*grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));*/
+    grid-template-rows: 80px auto 80px;
+    position: fixed !important;
+    z-index: 1000 !important;
+    top: 0px !important;
+    right: 0px !important;
+    bottom: 0px !important;
+    left: 0px !important;
+    overflow-y: auto !important;
+    /*display: table !important; 
+    height: 100% !important;
+    width: 100% !important; */
+    padding: 64px;
+    background-color: transparent;
+    webkit-transform: translate3d(0,0,0) !important;
+}
+
+.overlay-modal{
+   /* grid-row: 2;
+    grid-column: 2; */
+    position: fixed !important;
+    z-index: 1000 !important;
+    top: 0px !important;
+    right: 0px !important;
+    bottom: 0px !important;
+    left: 0px !important;
+    overflow-y: auto !important;
+    z-index: 3000 !important;
+    background-color: #ffffff !important;
+    margin: auto !important;
+    max-width: 568px !important;
+    width: 100% !important;
+    padding: 32px !important;
+    max-height: fit-content;
+}
+
+.overlay-close{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+
+.overlay-modal > label {
+    display: inline-block;
+    max-width: 100%;
+    margin-bottom: 5px;
+    font-weight: 700;
+}
+.overlay-modal > .form-group{
+    padding-top: 15px;
+}
+
+.overlay-modal  .form-control {
+    display: block;
+    width: 100%;
+    height: 34px;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #555;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
+    -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+}
+.overlay-modal  .error {
+    color: red;
+    font-size: 12px;
+    margin-top: 5px;
+}
+
+.error {
+    color: red;
+    font-size: 12px;
+    margin-top: 5px;
+}
+
+.overlay-modal  .btn {
+    display: block;
+    padding: 6px 12px;
+    margin-bottom: 0;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.42857143;
+    text-align: center;
+    white-space: nowrap;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-image: none;
+    border: 1px solid transparent;
+    border-radius: 4px;
+}
+
+.overlay-modal  .btn-primary {
+    color: #fff;
+    background-color: orange;
+    /*border-color: #2e6da4;*/
+}
+
+.overlay-modal  .btn-add {
+    color: #fff;
+    background-color: gray;
+    float:center;
+    /*border-color: #2e6da4;*/
 }
