--- a/sass/style.scss
+++ b/sass/style.scss
@@ -6,14 +6,96 @@ $color:silver;
 $accent:#27ae60;
 $borderRadius:4px;
 $website:rgba(85, 172, 238, 1);
+$font-theme:"Open Sans","Libre Baskerville",Arial,sans-serif;
 
-/*body {
-  font: $theme-font;
-  background-color: $themeColor-Light;
-  h1, h2 {
-      color: $themeColor-Dark
-  }
+/********** GENERAL STYLES **********/
+
+@font-face {
+    font-family: 'Open Sans';
+    src: url("/fonts/OpenSans-Regular.ttf") format("truetype");
+ }
+
+h1, h2, h3, h4, h5, h6{ font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif; text-transform: uppercase; font-weight: bold; }
+h2{ letter-spacing: 3px; margin-right: -3px; }
+h3{ letter-spacing: 3px; margin-right: -3px; }
+h6{ font-size: 14px; letter-spacing: 2px; margin-right: -2px; }
+h5{ font-size: 18px; letter-spacing: 3px; margin-right: -3px; }
+h1{ margin:0px; font-size: 16px}
+body {
+    font-size: 16px;
+    font-family: $font-theme;
+   /* font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;*/
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    line-height: 1.5;
+    color: #3b3a3a;
+    font-weight: 300;
+    padding: 0px;
+    margin: 0px;
+   }
+   
+   p {
+    font-size: 0.875em;
+   }
+   
+   ul {
+       list-style-type: none;
+   }
+   a { 
+   
+       text-decoration: none !important;
+   }
+   
+   *{
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+             box-sizing: border-box;
+   }
+
+/******* GRID CONTAINER   *****/
+.container {
+    display: grid;
+    grid-gap: 3px;
+    grid-template-columns: repeat(12, 1fr);
+    /*grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));*/
+    grid-template-rows: 80px auto 80px;
+   /* grid-template-areas: 
+    ". h h h h h h h h h h ."
+    "m c c c c c c c c c c c"
+    ". f f f f f f f f f f ."; */
+}
+
+.main-header {
+    grid-row: 1;
+    grid-column: 1 / -1;
+    align-items: center;
+   /* border-bottom: 2px solid black;
+    z-index: 1;
+    display: flex;
+    position: fixed;
+    top: 0;
+    left:0;
+    width: 100%;
+    justify-content: space-around;*/
+}
+/*.menu {
+    grid-column: 1 / 2;
 }*/
+
+.content {
+    margin: 10 0 50 0;
+    grid-row: 2;
+    grid-column: 2 / 12;
+    overflow-y: auto;
+    align-items: center;
+    text-align: center;
+}
+
+.footer {
+    grid-column: 1 / -1;
+    grid-row: 3;
+}
+
 .hr {
   text-align: center;
   span {
@@ -77,6 +159,7 @@ $website:rgba(85, 172, 238, 1);
     display: inline-block;
 }
 
+/* Styling FORM */
 .form {
   &--field {
     margin: 2rem 0 0 0;
@@ -146,7 +229,7 @@ $website:rgba(85, 172, 238, 1);
   }
 
   &--dropdownContent {
-    display: none;
+    display: block;
     position: absolute;
     background-color: #ffffff;
     min-width: 100%;
@@ -323,84 +406,7 @@ nav[role='navigation'] {
 
 // TO DO APPLY with SASS
 
-/********** GENERAL STYLES **********/
 
-h1, h2, h3, h4, h5, h6{ font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif; text-transform: uppercase; font-weight: bold; }
-h2{ letter-spacing: 3px; margin-right: -3px; }
-h3{ letter-spacing: 3px; margin-right: -3px; }
-h6{ font-size: 14px; letter-spacing: 2px; margin-right: -2px; }
-h5{ font-size: 18px; letter-spacing: 3px; margin-right: -3px; }
-h1{ margin:0px; font-size: 16px}
-body {
-    font-size: 100%;
-    font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    padding: 0px;
-    margin: 0px;
-   }
-   
-   p {
-    font-size: 0.875em;
-   }
-   
-   ul {
-       list-style-type: none;
-   }
-   a { 
-   
-       text-decoration: none !important;
-   }
-   
-   *{
-        -webkit-box-sizing: border-box;
-        -moz-box-sizing: border-box;
-             box-sizing: border-box;
-   }
-
-/******* GRID CONTAINER   *****/
-.container {
-    display: grid;
-    grid-gap: 3px;
-    grid-template-columns: repeat(12, 1fr);
-    /*grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));*/
-    grid-template-rows: 80px auto 80px;
-   /* grid-template-areas: 
-    ". h h h h h h h h h h ."
-    "m c c c c c c c c c c c"
-    ". f f f f f f f f f f ."; */
-}
-
-.main-header {
-    grid-row: 1;
-    grid-column: 1 / -1;
-    align-items: center;
-   /* border-bottom: 2px solid black;
-    z-index: 1;
-    display: flex;
-    position: fixed;
-    top: 0;
-    left:0;
-    width: 100%;
-    justify-content: space-around;*/
-}
-/*.menu {
-    grid-column: 1 / 2;
-}*/
-
-.content {
-    margin: 30 0 50 0;
-    grid-row: 2;
-    grid-column: 2 / 12;
-    overflow-y: auto;
-    align-items: center;
-    text-align: center;
-}
-
-.footer {
-    grid-column: 1 / -1;
-    grid-row: 3;
-}
 
 /************** HEADER STYLE ********/
 
